# Parallel-Computing-S2019-RPI

./: .gitignore  README.md  misc_notes.txt
Assignment1/: Starter_Data_Struct.txt  a.out  cla  cla.out  leeh17_hw1.c  leeh17_hw1.out  leeh17_hw_output.txt
Assignment2/: leeh17@mastiff.cs.rpi.edu  leeh17_hw2  leeh17_hw2.c  leeh17_hw2.out  leeh17_hw2_v1.c  leeh17_hw2_vRCA.c  leeh17_hw2_vRCA.out  mpi-cla-io  mpi-cla-io_example.c  mpi-cla-io_example.out  test_input_1.txt
Assignment3/: MakeFile  leeh17_hw3.c  leeh17_hw3.out  leeh17_hw3.out  leeh17_hw3_local.c  leeh17_hw3_localv2.c  leeh17_hw3_mpiReduce.c  leeh17_hw3_mpiReduce.out  make  run-hw3.sh  run-hw3_large.sh  (+3 more)
Project/: CMakeLists.txt  Makefile-bgq  test.txt
Project/Final_zip/: Makefile-bgq  data-structures.h  pthread-wrappers.h  readme.txt
Project/Final_zip/src/: project.cpp
Project/TestGraphs/: 6_node_example  create_random_network.py  email-enron.adj  from_edge_list.py  medium-3.adj  p2p-gnutella.adj  random-10-27-5-2.700000.adj  random-1000-3993-5-3.993000.adj  random-10000-120018-5-12.001800.adj  random-10000-30007-5-3.000700.adj  random-10000-59977-5-5.997700.adj  random-100000-300098-5-3.000980.adj  small-12.adj  small-3.adj  small-6.adj
Project/src/: Makefile  a.out  data-structures.cpp  data-structures.h  project.cpp  project_old.cpp  project_oldv0.cpp  pthread-wrappers.cpp  pthread-wrappers.h  testing_plans
Project/testing_scripts/: 128_rank_experiments.sh  128_rank_experiments_real_graphs.sh  16_rank_experiments.sh  16_rank_experiments_real_graphs.sh  4_rank_experiments.sh  4_rank_experiments_real_graphs.sh  64_rank_experiments.sh  64_rank_experiments_real_graphs.sh
(+49 files in other folders)
